--- a/7.html
+++ b/7.html
@@ -2,7 +2,12 @@
 <head>
 <meta charset="utf-8">
 <meta name=viewport content="width=device-width, initial-scale=1">
-
+<title></title>
+<link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+<meta name="robots" content="noindex" /> <meta name="googlebot" content="noindex" />
+<meta name="robots" content="noindex, nofollow" />
+</head>
+<body>
 <!-- component -->
 <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
 
