--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <title>My Cart</title>
-  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="bootstrap.min.css">
   <style>
   .badge-notify{
     background:red;
@@ -78,9 +78,9 @@
   </div>
 
 
-  <script src="js/jquery-2.2.3.min.js"></script>
-  <script type='text/javascript' src="js/bootstrap.min.js"></script>
-  <script type='text/javascript' src="js/jquery.mycart.js"></script>
+  <script src="jquery-2.2.3.min.js"></script>
+  <script type='text/javascript' src="bootstrap.min.js"></script>
+  <script type='text/javascript' src="jquery.mycart.js"></script>
   <script type="text/javascript">
   $(function () {
 
