--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
   <title>My Cart</title>
   <link rel="stylesheet" href="bootstrap.min.css">
-  <style>
+ 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+ <style>
   .badge-notify{
     background:red;
     position:relative;
@@ -31,7 +34,7 @@
 
   <div class="row">
     <div class="col-md-3 text-center">
-      <img src="images/img_1.png" width="150px" height="150px">
+      <img src="img_1.png" width="150px" height="150px">
       <br>
       product 1 - <strong>$10</strong>
       <br>
@@ -40,7 +43,7 @@
     </div>
 
     <div class="col-md-3 text-center">
-      <img src="images/img_2.png" width="150px" height="150px">
+      <img src="img_2.png" width="150px" height="150px">
       <br>
       product 2 - <strong>$20</strong>
       <br>
@@ -49,7 +52,7 @@
     </div>
 
     <div class="col-md-3 text-center">
-      <img src="images/img_3.png" width="150px" height="150px">
+      <img src="img_3.png" width="150px" height="150px">
       <br>
       product 3 - <strong>$30</strong>
       <br>
@@ -58,7 +61,7 @@
     </div>
 
     <div class="col-md-3 text-center">
-      <img src="images/img_4.png" width="150px" height="150px">
+      <img src="img_4.png" width="150px" height="150px">
       <br>
       product 4 - <strong>$40</strong>
       <br>
@@ -67,7 +70,7 @@
     </div>
 
     <div class="col-md-3 text-center">
-      <img src="images/img_5.png" width="150px" height="150px">
+      <img src="img_5.png" width="150px" height="150px">
       <br>
       product 5 - <strong>$50</strong>
       <br>
