--- a/7.html
+++ b/7.html
@@ -166,12 +166,9 @@
                         </div>
                     </div>
                     <div class="flex items-center mt-6">
-<a href="https://checkout.chec.io/sxjtrb">
-                        <button class="px-8 py-2 bg-indigo-600 text-white text-sm font-medium rounded hover:bg-indigo-500 focus:outline-none focus:bg-indigo-500">Order Now</button></a>
-                        <button class="mx-2 text-gray-600 border rounded-md p-2 hover:bg-gray-200 focus:outline-none">
-                            <svg class="h-5 w-5" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor"><path d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"></path></svg>
-                        </button></a>
-                    </div>
+            <div class="ecsp ecsp-SingleProduct-v2 ecsp-Product ec-Product-148621645" itemtype="http://schema.org/Product" data-single-product-id="148621645"><div class="ecsp-title" itemprop="name" style="display:none;" content="Fertilized Kuroiler Eggs"></div><div customprop="addtobag"></div></div><script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?18153135&data_platform=singleproduct_v2" charset="utf-8"></script><script type="text/javascript">xProduct()</script>
+                    
+                  </div>
                 </div>
             </div>
             <div class="mt-16">
@@ -221,9 +218,7 @@
                     </div>
                 </div>
             </div>
-<script language=javascript>document.write(unescape('%3C%64%69%76%20%69%64%3D%22%6D%79%2D%73%74%6F%72%65%2D%31%38%31%35%33%31%33%35%22%3E%3C%2F%64%69%76%3E%0A%3C%64%69%76%3E%0A%3C%73%63%72%69%70%74%20%64%61%74%61%2D%63%66%61%73%79%6E%63%3D%22%66%61%6C%73%65%22%20%74%79%70%65%3D%22%74%65%78%74%2F%6A%61%76%61%73%63%72%69%70%74%22%20%73%72%63%3D%22%68%74%74%70%73%3A%2F%2F%61%70%70%2E%65%63%77%69%64%2E%63%6F%6D%2F%73%63%72%69%70%74%2E%6A%73%3F%31%38%31%35%33%31%33%35%26%64%61%74%61%5F%70%6C%61%74%66%6F%72%6D%3D%63%6F%64%65%26%64%61%74%61%5F%64%61%74%65%3D%32%30%32%31%2D%30%34%2D%32%34%22%20%63%68%61%72%73%65%74%3D%22%75%74%66%2D%38%22%3E%3C%2F%73%63%72%69%70%74%3E%3C%73%63%72%69%70%74%20%74%79%70%65%3D%22%74%65%78%74%2F%6A%61%76%61%73%63%72%69%70%74%22%3E%20%78%50%72%6F%64%75%63%74%42%72%6F%77%73%65%72%28%22%63%61%74%65%67%6F%72%69%65%73%50%65%72%52%6F%77%3D%33%22%2C%22%76%69%65%77%73%3D%67%72%69%64%28%32%30%2C%33%29%20%6C%69%73%74%28%36%30%29%20%74%61%62%6C%65%28%36%30%29%22%2C%22%63%61%74%65%67%6F%72%79%56%69%65%77%3D%67%72%69%64%22%2C%22%73%65%61%72%63%68%56%69%65%77%3D%6C%69%73%74%22%2C%22%69%64%3D%6D%79%2D%73%74%6F%72%65%2D%31%38%31%35%33%31%33%35%22%29%3B%3C%2F%73%63%72%69%70%74%3E%0A%3C%2F%64%69%76%3E'))</script>
-
-        </div>
+   </div>
     </main>
 
     <footer class="bg-gray-200">
