--- a/7.html
+++ b/7.html
@@ -31,13 +31,14 @@
                     <img class="h-full w-full rounded-md object-cover max-w-lg mx-auto" src="https://images.unsplash.com/photo-1578262825743-a4e402caab76?ixlib=rb-1.2.1&auto=format&fit=crop&w=1051&q=80" alt="Nike Air">
                 </div>
                 <div class="w-full max-w-lg mx-auto mt-5 md:ml-8 md:mt-0 md:w-1/2">
-                    <h3 class="text-gray-700 uppercase text-lg">Nike Air</h3>
-                    <span class="text-gray-500 mt-3">$125</span>
+                    <h2 class="text-gray-700 uppercase text-lg">Pure Natural Honey</h2>
+                    <p class="py-6 text-gray-500">Natural product from Ukambani</p>
+        
+                    <span class="text-gray-500 mt-3">800KSh | 1Kg</span>
                     </div>
                     
                 <div class="flex items-center mt-6">
-               <p class="py-6 text-gray-300">Natural product</p>
-            <div class="ecsp ecsp-SingleProduct-v2 ecsp-Product ec-Product-148621645" itemtype="http://schema.org/Product" data-single-product-id="148621645"><div class="ecsp-title" itemprop="name" style="display:none;" content="Fertilized Kuroiler Eggs"></div><div customprop="addtobag"></div></div><script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?18153135&data_platform=singleproduct_v2" charset="utf-8"></script><script type="text/javascript">xProduct()</script>
+               <div class="ecsp ecsp-SingleProduct-v2 ecsp-Product ec-Product-148621645" itemtype="http://schema.org/Product" data-single-product-id="148621645"><div class="ecsp-title" itemprop="name" style="display:none;" content="Fertilized Kuroiler Eggs"></div><div customprop="addtobag"></div></div><script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?18153135&data_platform=singleproduct_v2" charset="utf-8"></script><script type="text/javascript">xProduct()</script>
                     </div>
                 </div>
             </div>
